# KernelNetworkDebugger

./: .gitignore  build_all.bat
app/: CMakeLists.txt  build_app.bat
app/src/: app_model.cpp  app_model.h  http_parse.cpp  http_parse.h  knd_client.cpp  knd_client.h  knd_inject.cpp  knd_inject.h  knd_service.cpp  knd_service.h  knd_sslkeys.cpp  main.cpp  mitm_ca.cpp  mitm_ca.h  mitm_proxy.cpp  mitm_proxy.h  mock.cpp  mock.h  settings.cpp  settings.h  tls_decrypt.cpp  tls_decrypt.h  tls_spike.cpp  tls_test.cpp  ui.cpp  ui.h  win_integration.cpp  win_integration.h
common/: knd_protocol.h
driver/: build_driver.bat  driver.c  ioctl.c  knd.inf  knd.vcxproj  knd_driver.h  make_test_cert.ps1  ring.c  wfp.c
